@@ -8,11 +8,21 @@ module RecordFilter
         @column, @negated, @operator = column, negated, nil
       end
 
-      [:equal_to, :is_null, :less_than, :less_than_or_equal_to, :greater_than, :greater_than_or_equal_to, :in, :between, :like].each do |operator|
+      [:equal_to, :is_null, :less_than, :less_than_or_equal_to, :greater_than, :greater_than_or_equal_to, :in, :like].each do |operator|
         define_method(operator) do |*args|
           @value = args[0] 
           @operator = operator
           self
+        end
+      end
+
+      # Between can take either a tuple of [start, finish], a range, or two values.
+      def between(start, finish=nil)
+        @operator = :between
+        if !finish.nil?
+          @value = [start, finish]
+        else
+          @value = start
         end
       end
 
